--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   babylonjs_viewer: ^1.2.1
+  lottie: ^2.7.0
   
   
   
@@ -73,6 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/logoAnimation.json
     - assets/images/quiz-logo.png
     - assets/images/logo.png
     - assets/images/playstore.png
