--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,6 +27,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
+
+
 android {
     namespace "com.example.quiz_app"
     compileSdkVersion 34  // Explicitly set compileSdkVersion to 34
@@ -46,7 +55,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.quiz_app"
+        applicationId "com.dipmaybiswas.Googly"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion 34  // Explicitly set targetSdkVersion to 34
         versionCode flutterVersionCode.toInteger()
@@ -54,9 +63,18 @@ android {
         multiDexEnabled true  // Enable MultiDex
     }
 
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
